--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "post-buildkite-plugin",
   "version": "0.0.12",
-  "description": "Post jobs recovery buildkite plugin (WIP)",
+  "description": "Post jobs recovery buildkite plugin",
   "main": "index.js",
   "bin": {
     "pipeline": "bin/pipeline"
@@ -10,13 +10,15 @@
     "test": "test"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest --coverage",
+    "lint": "docker run -it --rm -v `pwd`:/plugin buildkite/plugin-linter --id jmendiara/post",
+    "precommit": "pretty-quick --staged"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jmendiara/post-buildkite-plugin.git"
   },
-  "author": "",
+  "author": "Javier Mendiara <jmendiara@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/jmendiara/post-buildkite-plugin/issues"
@@ -26,6 +28,14 @@
     "js-yaml": "^3.12.0"
   },
   "devDependencies": {
-    "jest": "^23.6.0"
+    "husky": "^1.0.0-rc.15",
+    "jest": "^23.6.0",
+    "prettier": "1.14.3",
+    "pretty-quick": "^1.7.0"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "printWidth": 120
   }
 }
